
       Changes file for kstart
       ================

 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


2000-06-09  David Faure  <faure@kde.org>

     * ported to NETWM

1999-11-20  David Faure  <faure@kde.org>

     * ported to KWinModule

In 0.9 patchlevel 1:

     * added "-nofocus" switch (sorry, I forgot this one)


0.9: initial checkin